--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="./app.js"></script>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Habbit</title>
+	<link rel="stylesheet" href="/styles.css" />
 </head>
-<body style="background-color: #1C1B21; text-align:center;">
-	<img src="./logo.svg" alt="logo">
+
+<body>
+	<script src="app.js"></script>
 </body>
+
 </html>
