--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Habbit</title>
-	<link rel="stylesheet" href="/styles.css" />
+	<link rel="stylesheet" href="./styles/main.css" />
 </head>
 
 <body>
-	<script src="app.js"></script>
+	<script src="./scripts/app.js"></script>
 </body>
 
 </html>
