--- a/index.html
+++ b/index.html
@@ -7,9 +7,74 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Habbit</title>
 	<link rel="stylesheet" href="./styles/main.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	<div class="app">
+		<div class="panel">
+			<img class="logo" src="/images/logo.svg" alt="Habbit app logo">
+			<nav class="menu">
+				<div class="menu__list"></div>
+				<button class="menu__add" onclick="togglePopUp()">
+					<img src="./images/add.svg" alt="add button">
+				</button>
+			</nav>
+		</div>
+		<div class="content">
+			<header>
+				<h1 class="h1"></h1>
+				<div class="progress">
+					<div class="progress_text">
+						<div class="progress__name">Прогресс</div>
+						<div class="progress__percent"></div>
+					</div>
+					<div class="progress__bar">
+						<div class="progress__cover_bar"></div>
+					</div>
+				</div>
+			</header>
+			<main>
+				<div id="days"></div>
+				<div class="habbit">
+					<div class="habbit__day">День _</div>
+					<form class="habbbit__form" onsubmit="addDays(event)">
+						<input name="comment" class="input_icon" type="text" placeholder="Комментарий" />
+						<img class="input__icon " src="./images/comment.svg" alt="comment icon">
+						<button class="button">Готово</button>
+					</form>
+				</div>
+			</main>
+		</div>
+		<div class="cover cover_hidden" id="add-habbit-popup">
+			<div class="popup">
+				<h2>Новая привычка</h2>
+				<div class="icon-label">Иконка</div>
+				<div class="icon-select">
+					<button class="icon icon_active" onclick="setIcon(this, 'sport')">
+						<img src="./images/sport.svg" alt="Sport">
+					</button>
+					<button class="icon" onclick="setIcon(this, 'water')">
+						<img src="./images/water.svg" alt="Water">
+					</button>
+					<button class="icon" onclick="setIcon(this, 'food')">
+						<img src="./images/food.svg" alt="Food">
+					</button>
+				</div>
+				<form class="popup__form">
+					<input type="text" name="name" placeholder="Название">
+					<input type="text" name="icon" hidden placeholder="Иконка" value="sport">
+					<input type="number" name="target" placeholder="Цель">
+					<button class="button" type="submit">Добавить</button>
+				</form>
+				<button class="popup__close" onclick="togglePopUp()">
+					<img src="./images/close.svg" alt="Close popup">
+				</button>
+			</div>
+		</div>
+	</div>
 	<script src="./scripts/app.js"></script>
 </body>
 
